--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-theme: jekyll-theme-cayman
-url: simulighter.html
+title: Jekyll tutorial
+url: index.md
+description: This is an amazing site I created while learning jekyll.
