--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+theme: jekyll-theme-cayman
 title: Jekyll tutorial
 url: index.md
 description: This is an amazing site I created while learning jekyll.
